2007-09-05  Gert Driesen  <drieseng@users.sourceforge.net>

	* System_test.dll.sources: Added EnumConverterTest.cs.

2007-08-29  Ivan N. Zlatev  <contact@i-nz.net>

	* System.dll.sources: add DefaultSerializationProviderAttribute.cs,
        ComponentSerializationService.cs, MemberRelationship.cs, 
        SerializationStore.cs, MemberRelationshipService.cs, 
        DesignerOptionService.cs, ITreeDesigner.cs

2007-08-29  Atsushi Enomoto  <atsushi@ximian.com>

	* System.dll.sources : added Win32NetworkInterfaceMarshal.cs.

2007-08-24  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : split PREBUILT_DEP from CONFIGURATION_DEP so that the
	  prebuilt System.dll could be referenced for security stuff too.

2007-08-09  Atsushi Enomoto  <atsushi@ximian.com>

	* net_2_1_System.dll.sources :
	  Replaced HttpWebRequest and HttpWebResponse with those for 2.1,
	  and removed related 2.0-only types.

2007-08-09  Jb Evain  <jbevain@novell.com>

	* net_2_1_System.dll.sources: use a special .sources file
	for the 2.1 profile.

2007-08-06  Atsushi Enomoto  <atsushi@ximian.com>

	* System.dll.sources : added PerformanceCounterInstanceLifetime.cs
	  and PerformanceCounterCategoryType.cs.

2007-08-01  Atsushi Enomoto  <atsushi@ximian.com>

	* System_test.dll.sources : added BackgroundWorkerTest.cs.

2007-07-20  Jb Evain  <jbevain@novell.com>

	* Makefile: no need for the deps for installing in 2.1.

2007-07-11  Alan McGovern  <amcgovern@novell.com>

	* Uri.cs: Fix for #78781 applied.

2007-07-11  Ankit Jain  <jankit@novell.com>

	* System_test.dll.sources: Add ProcessStartInfoTest.cs.

2007-06-12  Marek Safar <marek.safar@gmail.com>

	* Makefile: Check only major framework version to do 2.x build.

2007-06-05  Raja R Harinath  <harinath@gmail.com>

	Make cyclic-dependency handling more readable
	* Makefile (MISSING_DEPS): New.  Contains the list of cyclic
	dependencies that aren't present.
	(echo-warning): Simplify drastically.

2007-06-04  Atsushi Enomoto  <atsushi@ximian.com>
