@@ -965,4 +965,5 @@ System.Net/UploadValuesCompletedEventHandler.cs
 System.Net/UploadStringCompletedEventHandler.cs
 System.Net/DownloadStringCompletedEventHandler.cs
 System.Runtime.InteropServices/DefaultParameterValueAttribute.cs
+System.Runtime.InteropServices/HandleCollector.cs
 System.Runtime.InteropServices/StandardOleMarshalObject.cs
