@@ -1,3 +1,7 @@
+2007-09-05  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* System.dll.sources : added HandleCollector.cs.
+
 2007-09-05  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* System_test.dll.sources: Added EnumConverterTest.cs.
